added answered question view